--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,3 @@
-DATABASE_URL='postgres://cherry_user:w],y>5qg>ryqrp5a@localhost/cherry_db'
-DJANGO_DEBUG=False
+DATABASE_URL='postgres://cherry_user:tYSk4dqaW7Hq4cw2r4hP@localhost/cherry_db'
+DJANGO_DEBUG=True
+USE_DOCKER=False
